<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".homeFragments.LoginSignUpFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="150dp"
        android:src="@drawable/logo"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_height="@dimen/space150" />


    <TextView
        android:layout_width="wrap_content"
        android:text="@string/let_s_get_started"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="@dimen/dp_16"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/let_s_get_started"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/let_s_get_started"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/grey"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="@dimen/dp_250"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:padding="10dp"
        android:text="@string/qw"
        android:layout_below="@id/login"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dp_20"
        android:textSize="16sp"
        android:layout_gravity="center"
         />
 <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup"
        android:layout_width="@dimen/dp_250"
        android:layout_height="wrap_content"
        android:background="@drawable/stroke_box"
        android:padding="10dp"
        android:text="Sign Up"
        android:layout_below="@id/btn_login"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dp_20"
        android:textSize="16sp"
        android:layout_gravity="center"
         />

</RelativeLayout>